--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section class="login-container">
 
         <form id="formulario">
-            <h2>Inicio de sesión</h2>
+            <h2>Iniciar sesión</h2>
             <p>Inicia sesión en tu cuenta, si no tienes una, recibirás indicaciones para crearla</p>
 
             <label for="username">Usuario</label>
